# dotfiles

./: .editorconfig  .gitignore  .install.sh.un~  .test.sh.swp  1  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  Makefile  README.md  config.sh  dotup.toml  gitpush.sh  install.sh  install.sh.backup  install_v2.sh  langchain.py  lts  setup.sh  snap.sh  test.py  test.sh  test_git.py  ycm.sh
.github/workflows/: ci.yml  main.yml  native_dotfiles.yml  release.yml  security-audit.yml
alacritty/: alacritty.yml
brew/: application.sh
config/: packages.conf  packages.json  system.conf
docs/: QUICK_START.md
lib/: brew.sh  constants.sh  fonts.sh  logging.sh  package_manager.sh  packages.sh  pkg_manager.sh  system.sh  tmux.sh  utils.sh  vim.sh  zsh.sh
scripts/: main_setup.sh
src/: config.rs  dashboard.rs  doctor.rs  fonts.rs  main.rs  packages.rs  sync.rs  tmux.rs  tui.rs  utils.rs  vim.rs  zsh.rs
starship/: starship.toml
tests/: integration_test.sh
tmux/: 1  config.tmux  statusline.tmux  tmux_colors.sh
tmux/scripts/: clip.sh  paste.sh
tmuxs/: tmux.conf
utils/: config_parser.sh  test.sh
vim/: .1.1.vim  1  coc-settings.json  config.vim  config.vim.bf  ideavimrc.vim  init.lua  plugin.vim
vim/lua/: lua
vim/lua/user/: bufferline.lua  colorscheme.lua  comment.lua  dashboard.lua  gitsigns.lua  indentline.lua  keymaps.lua  leap.lua  lsp.lua  lualine.lua  mini.lua  null-ls.lua  nvim-tree.lua  options.lua  (+5 more)
vimrc/: plugin.vim
vimrcs/: basic.vim  plugin.vim
wezterm/: wezterm.lua
zsh/: .p10k.zsh  1  config.zsh
zshrc/: custom.zsh
zshrcs/: basic.zsh
(+3 files in other folders)
