[package]
name = "dotup"
version = "2.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
crossterm = "0.29.0"
indicatif = "0.18.4"
ratatui = "0.30.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.38.4"
toml = "1.1.2"

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"
